# snareproxy

./: .gitignore  Cargo.toml  README.md
crates/bogbogprox-core/: Cargo.toml
crates/bogbogprox-core/src/: annotate.rs  intercept.rs  lib.rs  model.rs  render.rs  rules.rs  scanner.rs  session.rs  store.rs  ws.rs
crates/bogbogprox-desktop/: Cargo.toml  tauri.conf.json
crates/bogbogprox-desktop/src/: main.rs
crates/bogbogprox-engine/: Cargo.toml
crates/bogbogprox-engine/src/: ca.rs  lib.rs
crates/bogbogprox-mcp/: Cargo.toml
crates/bogbogprox-mcp/src/: main.rs
crates/bogbogprox-plugin/: Cargo.toml
crates/bogbogprox-plugin/src/: lib.rs
crates/bogbogprox-plugin/tests/: hooks.rs
crates/bogbogprox-plugin/wit/: world.wit
crates/bogbogprox-store-postgres/: Cargo.toml
crates/bogbogprox-store-postgres/src/: lib.rs
crates/bogbogprox-store-sqlite/: Cargo.toml
crates/bogbogprox-store-sqlite/src/: lib.rs
crates/bogbogprox-tui/: Cargo.toml
crates/bogbogprox-tui/src/: httpclient.rs  main.rs  sse.rs
crates/bogbogproxd/: Cargo.toml
crates/bogbogproxd/src/: active_scan.rs  api.rs  auth.rs  cdp.rs  config.rs  dashboard.html  intruder.rs  macros.rs  main.rs  paths.rs  pubsub.rs  repeater.rs  sequencer.rs
crates/snare-core/: Cargo.toml
crates/snare-core/src/: intercept.rs  lib.rs  model.rs  rules.rs  scanner.rs  session.rs  ws.rs
crates/snare-engine/: Cargo.toml
crates/snare-engine/src/: lib.rs
crates/snare-mcp/src/: main.rs
crates/snare-plugin/src/: lib.rs
crates/snare-store-postgres/: Cargo.toml
crates/snare-store-postgres/src/: lib.rs
crates/snare-tui/src/: httpclient.rs  main.rs  sse.rs
crates/snared/: Cargo.toml
crates/snared/src/: api.rs  auth.rs  config.rs  dashboard.html  intruder.rs  macros.rs  main.rs  paths.rs  pubsub.rs  repeater.rs  sequencer.rs
docs/: ARCHITECTURE.md  DESIGN.md  USAGE.md  architecture.html
docs/design/: team-mode.md  wasm-plugins.md
examples/plugins/header-tagger/: Cargo.toml
examples/plugins/header-tagger/src/: lib.rs
