[workspace]
resolver = "2"
members = [
    "crates/bogbogprox-core",
    "crates/bogbogprox-store-sqlite",
    "crates/bogbogprox-store-postgres",
    "crates/bogbogprox-engine",
    "crates/bogbogprox-plugin",
    "crates/bogbogproxd",
    "crates/bogbogprox-tui",
    "crates/bogbogprox-mcp",
    "crates/bogbogprox-desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BogBogProx contributors"]
repository = "https://github.com/jobpatiphan/bogbogprox"
rust-version = "1.75"

[workspace.dependencies]
bogbogprox-core = { path = "crates/bogbogprox-core" }
bogbogprox-store-sqlite = { path = "crates/bogbogprox-store-sqlite" }
bogbogprox-engine = { path = "crates/bogbogprox-engine" }

anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
url = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
