[package]
name = "bogbogprox-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bogbogprox-mcp"
path = "src/main.rs"

[dependencies]
bogbogprox-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
