[package]
name = "bogbogprox-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM plugin host for BogBogProx (design: docs/design/wasm-plugins.md, P1)"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
wasmtime = "27"
wasmtime-wasi = "27"
