[package]
name = "snare-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
snare-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
hudsucker = "0.23"
rcgen = { version = "0.13", features = ["pem"] }
http-body-util = "0.1"
hyper = "1"
bytes = "1"
